--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint-staged": "^15.2.2"
   },
   "dependencies": {
-    "express": "^4.19.1"
+    "express": "^4.19.1",
+    "validator": "^13.11.0"
   }
 }
